# EpitechBundle

./: LICENSE  README.md
Tek1/: README.md
Tek1/CPE/BSQ/: Makefile  README.md  main.c
Tek1/CPE/BSQ/include/: my.h
Tek1/CPE/BSQ/src/: basics.c  bsq.c  check_pos.c
Tek1/CPE/GetNextLine/: README.md  main.c
Tek1/CPE/Lemin/: Makefile  anthill
Tek1/CPE/Lemin/include/: get_next_line.h  my.h
Tek1/CPE/Lemin/src/: ants.c  check_buff.c  del_comment.c  del_line.c  del_space.c  epur_road.c  get_all_roads.c  get_buff.c  get_next_line.c  get_pos.c  get_road.c  get_roads_tools.c  init_road.c  init_room.c  init_val.c  int_to_str.c  lemin.c  linkedlists.c  main.c  my_strcat.c  my_strdup.c  print_lemin.c  str_to_tab.c  tab_size.c  tools.c  utils.c
Tek1/CPE/Matchstick/: Makefile  README.md  main.c
Tek1/CPE/Matchstick/include/: matchstick.h
Tek1/CPE/Matchstick/src/: ai.c  common_functions.c  display.c  get_nbr.c  get_next_line.c  map_generator.c  matchstick.c  player.c
Tek1/CPE/Need4Stek/: Makefile  README.md  main.c
Tek1/CPE/Need4Stek/include/: get_next_line.h  n4s.h
Tek1/CPE/Need4Stek/src/: basics.c  dir.c  end.c  exec.c  get_next_line.c  get_speed.c  move_car.c  rm_dots.c  str_to_tab.c
Tek1/CPE/Pushswap/: Makefile  README.md  main.c
Tek1/CPE/Pushswap/include/: my.h
Tek1/CPE/Pushswap/src/: c_library.c  list_functions.c  sort.c
Tek1/CPE/Sokoban/include/: my.h
Tek1/CPE/Sokoban/src/: basics.c
Tek1/MAT/101pong/: .gitignore  101pong.py  Makefile  README.md
Tek1/PSU/42sh/: 42sh  Makefile  README.md  main.c
Tek1/PSU/42sh/include/: get_next_line.h  mysh.h
Tek1/PSU/42sh/src/: basicfcts.c  cd_utils.c  change_directory.c  check_commands.c  check_commands2.c  check_pipe.c  env.c  execute_alias.c  execve.c  exit.c  get_next_line.c  globbing.c  left_redirections.c  multiple_pipes.c  my_put_nbr.c  my_strcat.c  parsing.c  repeat.c  right_redirections.c  setenv.c  shell.c  shell_tools.c  simple_pipe.c  str_to_wordtab.c  tmp_alias.c  tools.c  tools2.c  tools3.c  (+1 more)
Tek1/PSU/Minishell/: Makefile  README.md
Tek1/PSU/Minishell1/: main.c  mysh
Tek1/PSU/Minishell2/: Makefile  main.c  mysh  test.txt2
Tek1/PSU/Navy/: Makefile  README.MD  main.c
Tek1/PSU/Sokoban/: Makefile  README.md  main.c
Tek2/: README.md
Tek2/ASM/MinilibC/: Makefile  README.md
Tek2/CNA/Bollinger/: README.MD
Tek2/CNA/Trade/: Graph.py  README.md  trade
Tek2/OOP/Nanotekspice/: Makefile  main.cpp
Tek2/PSU/MyFTP/: Makefile  README.md  main.c
Tek2/PSU/Philosophers/: Makefile  README.MD  main.c
Tek2/PSU/Zappy/: Makefile  README.md
Tek3/: README.md
Tek3/AIA/Gomoku/: example.py  test.py
Tek3/CPP/Babel/: .gitignore  CMakeLists.txt  Server.py  compile.sh  conanfile.txt
Tek3/CPP/Babel/Client/: AudioManager.cpp  AudioManager.hpp  CMakeLists.txt  Client.cpp  Client.hpp  Client.pro  Main.cpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  OpusHandler.cpp  OpusHandler.hpp  PacketManager.cpp  PacketManager.hpp  StreamHandler.cpp  StreamHandler.hpp  Udpclient.cpp  Udpclient.hpp
Tek3/CPP/Babel/Documentation/: Doxyfile  babel.xml
Tek3/CPP/Babel/Server/: CMakeLists.txt
Tek3/CPP/Babel/Server/Src/: Main.cpp  Server.cpp  Server.hpp
Tek3/CPP/Babel/build-Client-Desktop-Debug/: Client  Makefile  moc_MainWindow.cpp  moc_Udpclient.cpp  ui_MainWindow.h
Tek3/CPP/RType/: .gitignore  CMakeLists.txt  README.md  ValgrindFilter.txt  valgrind.sh
Tek3/CPP/RType/Client/Src/: Core.cpp
Tek3/CPP/RType/Empty/: Main.cpp
Tek3/CPP/RType/Test/: Main.cpp
Tek3/CPP/Zia/: CMakeLists.txt  auto-merge.sh  conanfile.txt  documentation  install.sh
Tek3/CPP/Zia/include/: CBuffer.hpp  Client.hpp  Poll.hpp  SharedModules.hpp  SharedObject.hpp  Socket.hpp  ZiaConfig.hpp  colors.h  defaultConf.hpp  discordAPI.hpp  folder.hpp  folderWatcher.hpp  lserver.hpp  trace.hpp  zia.hpp
Tek3/CPP/Zia/modules/http/: Makefile  httpModule.cpp  httpModule.hpp
Tek3/CPP/Zia/modules/php/: Makefile  PhpImplentation.cpp
Tek3/CPP/Zia/modules/ssl/: Makefile  SSLModule.cpp  SSLModule.hpp
Tek3/CPP/Zia/src/: CBuffer.cpp  Client.cpp  Poll.cpp  SharedModules.cpp  SharedObject.cpp  Socket.cpp  ZiaConfig.cpp  discordAPI.cpp  folder.cpp  folderWatcher.cpp  lserver.cpp  main.cpp  trace.cpp  zia.cpp
Tek3/CPP/Zia/tests/: Makefile
Tek3/CPP/Zia/tests/src/: CBufferTests.cpp
Tek3/DEV/Area/: docker-compose.yml
Tek3/DEV/Dashboard/: Dockerfile  README.md  docker-compose.yml  get_ip.sh  live_edit.bat  up.bat
Tek3/DEV/Epicture/: build.gradle  gradle.properties
Tek3/MAT/301dannon/: 301dannon  Makefile  tester.sh
Tek3/MAT/302separation/: 302separation.py  Makefile
Tek3/MAT/304pacman/: Makefile  pacman.py
Tek3/MAT/305construction/: Makefile  construction.py
(+328 files in other folders)
